--- a/Brief_Overview_of_Python.ipynb
+++ b/Brief_Overview_of_Python.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "a = 'hello world'\n",
-    "print(a)"
+    " print(a)"
    ]
   },
   {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -74,7 +74,10 @@
    },
    "outputs": [],
    "source": [
-    "# create a variable called 'name' and print it out. Hint: look at the code above."
+    "# create your own variable to store your name. \n",
+    "# Try \"printing\" the variable in the output line below this cell. \n",
+    "# Hint: look at the code above.\n",
+    "# Write your code below this line.\n"
    ]
   },
   {
@@ -90,7 +93,7 @@
     "\n",
     "### String\n",
     "\n",
-    "When working in NLTK and other language processing libraries we will work a lot with strings. A string is simply character data and will always be surrounded by single or double quotes (there is no difference between using single vs double). Think of a string as plain text. \n",
+    "When working in NLTK and other language processing libraries we will work a lot with strings. A string is simply character data and will always be enclosed by single or double quotes (there is no difference between using single vs double). Think of a string as plain text. \n",
     "\n",
     "One thing to keep in mind is that strings are nothing but character data. So the string \"4\" is not the same thing as the number 4.\n",
     "\n",
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -107,7 +110,7 @@
    },
    "outputs": [],
    "source": [
-    "print ('4' + '4 \\n', 4 + 4)"
+    "print ('4' + '4', '\\n', 4 + 4)"
    ]
   },
   {
@@ -128,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -248,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -282,7 +285,7 @@
    "source": [
     "#### Sets\n",
     "\n",
-    "Sets are unordered collections of data that can be added to or changed. For our purposes the key difference between a list and a set is that a set does not contain duplicate variables and the values are not indexed. \n",
+    "Sets are unordered collections of data that can be added to or changed. For our purposes the key difference between a list and a set is that a set does not contain duplicate values, and the values are not indexed. \n",
     "\n",
     "Sets are made simlarly to lists but instead of using the squared brackets, sets are denoted with the curly brackets: `{}`\n",
     "\n",
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -342,14 +345,14 @@
    "outputs": [],
    "source": [
     "for word in s:\n",
-    "  print (word)\n",
+    "    print (word)\n",
     "  \n",
     "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -358,9 +361,24 @@
    "outputs": [],
    "source": [
     "# a set can be changed, but note the order is not significant. \n",
-    "# In this case the list is sorted in alphabetical order but it doesn't have any significance to the set.\n",
     "s.add('mouse')\n",
     "print (s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can sort a set with the `sorted()` function. In the case of strings the sort works in alphabetical order but it doesn't have any significance to the set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(s)"
    ]
   },
   {
@@ -380,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -394,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -407,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -415,12 +433,13 @@
    },
    "outputs": [],
    "source": [
-    "color[0] = 'cat'\n"
+    "# This should give you an error message\n",
+    "color[0] = 'cat'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -446,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -472,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -485,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -498,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -522,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -536,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -550,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -564,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -577,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -619,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -652,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -684,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -698,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -713,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -740,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -764,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -781,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -823,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -839,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -854,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -869,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -878,13 +897,14 @@
    "outputs": [],
    "source": [
     "# now we can use this function to greet anyone once we have a variable for the name.\n",
-    "your_name = ''\n",
+    "# also notice we are using a new command here. \n",
+    "your_name = input('What is your name?')\n",
     "greeting(your_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -898,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -928,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -941,19 +961,18 @@
     "\n",
     "def check_list(ls1,ls2):\n",
     "  # remove any duplicates from the list to find matches in both lists\n",
-    "  setx = set(ls1)\n",
-    "  sety = set(ls2)\n",
-    "  both = []\n",
-    "  for x in setx:\n",
-    "    for y in sety:\n",
-    "      if x == y:\n",
-    "        word_list[x] = 0\n",
-    "  all_words = ls1 + ls2\n",
-    "  for k in word_list.keys():\n",
-    "    for w in all_words:\n",
-    "      if k == w:\n",
-    "        word_list[k] += 1\n",
-    "  print(word_list)\n",
+    "    setx = set(ls1)\n",
+    "    sety = set(ls2)\n",
+    "    for x in setx:\n",
+    "        for y in sety:\n",
+    "            if x == y:\n",
+    "                word_list[x] = 0\n",
+    "    all_words = ls1 + ls2\n",
+    "    for k in word_list.keys():\n",
+    "        for w in all_words:\n",
+    "            if k == w:\n",
+    "                word_list[k] += 1\n",
+    "    print(word_list)\n",
     "        \n",
     "    \n",
     "    \n",
@@ -964,13 +983,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "jKQ23VLraoDt"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'bird': 2, 'dog': 3, 'cat': 3}\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat','dog','bird','cat','bear']\n",
     "pets = ['dog','cat','mouse','dog','bird']\n",
@@ -980,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1001,6 +1028,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
