update Intro to jupyter notebooks

--- a/Intro to Jupyter Notebooks.ipynb
+++ b/Intro to Jupyter Notebooks.ipynb
@@ -21,7 +21,8 @@
     "put your mouse over this text and \"double click\" on it. You will enter edit mode for the cell. \n",
     "\n",
     "Enter some text below (press `shift + enter` when you are done):\n",
-    "\n"
+    "\n",
+    "This is the best workshop... ever!"
    ]
   },
   {
@@ -37,8 +38,9 @@
    "source": [
     "`shift + enter` will run a cell, and execute the code writen in the cell. \n",
     "The type of cell we are using now is a \"markdown\" cell and these types of cells are used to add formatted and descriptive text to a notebook. \n",
+    "<br/>\n",
     "\n",
-    "<p>These cells can use markup notation ([Markup Cheetsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)), or you can also use html. </p>"
+    "These cells can use markup notation ([Markup Cheetsheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)), or you can also use html."
    ]
   },
   {
@@ -56,8 +58,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "print (' *Change this from a \"Markdown\" cell to a \"Code\" cell and then hit `shift+ enter` to run this as a code cell.*')"
    ]
@@ -125,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice the \"In\" and \"Out\" text by each cell. Jupyter Notebooks stores the contents of each cell in an \"In\" or \"Out\" Object. The contents of the cells can be accessed by referencing these objects."
+    "Notice the \"In\" and \"Out\" text by each cell. Jupyter Notebooks stores the contents of each cell in an \"In\" or \"Out\" List. The contents of the cells can be accessed by referencing these objects."
    ]
   },
   {
@@ -375,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Edit Mode Commands - Editing the interior of cells) (`enter`)"
+    "### Edit Mode Commands - Editing the interior of cells (`enter`)"
    ]
   },
   {
@@ -405,6 +409,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To **change the cell to a Markdown cell** use `m`. To **change the cell to Code cell** use `y`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## In Practice"
    ]
   },
@@ -412,12 +423,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import the random library to generate random numbers, and the string module to help us work with text."
+    "Python does not inherently do all of the things we have come to expect from it. In its raw form it is actually quite simple. However, many people have contributed to Pythons growth and utility by creating modules and libraries that extend the capabilities of the basic pyhton core. To access these modules and libraies we must `import` them. For example, how can we generate a random number in straight python? There is no built in python function to do this. However, There is a module in which some one has already used python to build a tool to generate random numbers and we can access this `random` module with `import random`.\n",
+    "\n",
+    "* [Python's random module](https://docs.python.org/2/library/random.html)\n",
+    "* [Python's string module](https://docs.python.org/2/library/string.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import the random module to generate random numbers, and the string module to help us work with text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,19 +448,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#test the code below by running the cell inplace several times using ctrl+enter.\n",
-    "#this code should generate a random, even number between 1 an 50 every time it is run.\n",
-    "\n",
-    "random.choice([x for x in range(50) if x % 2 == 0])"
+    "# use `ctrl + enter` to execute the code below several times.\n",
+    "# what does it look like it is doing.\n",
+    "random.choice([1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#test the code below by running the cell inplace several times using ctrl+enter.\n",
+    "#this code should generate a random, even number between 1 an 50 every time it is run.\n",
+    "\n",
+    "random.choice([x for x in range(1,50) if x % 2 == 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +796,7 @@
    "outputs": [],
    "source": [
     "def make_password_randomSample(x):\n",
-    "    '''This will generate a random passcode of length=x using the random.sample attribute'''\n",
+    "    '''This will generate a random passcode of length=x using the random.sample function'''\n",
     "    password = string.ascii_lowercase + string.ascii_uppercase + string.digits\n",
     "    return \"\".join(random.sample(password, k=x))"
    ]
